# wasm-game-of-life

./: Cargo.toml  LICENSE_MIT  README.jay
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  webpack.config.js
