[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["jay <jayped007@gmail.com>"]
edition = "2018"

# wasm-pack profiles: [package.metadata.wasm-pack.profile.<profile-name>]
# There are three profiles: dev (for --dev), profiling, and release (for --release).

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
quad-rand = "0.1.1"
js-sys = "0.3.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Add web-sys as a dependency and enable its 'console' feature
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
